Sonarlint update